[package]
name = "imgsync"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
glob = "0.3.3"
indicatif = { version = "0.18.4", features = ["rayon"] }
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[profile.release]
lto = true
strip = "symbols"
